--- a/templates/seer/index.ejs
+++ b/templates/seer/index.ejs
@@ -355,7 +355,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Sentiment.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h4> <strong> Sentiment </strong> </h4>
                         <h5>Sentiment analysis is a natural language processing technique used
                           to determine whether data is positive, negative or neutral.</h5>
@@ -372,7 +371,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Upvote.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Upvote ratio </strong> </h4>
                         <h5>Upvote ratio is used to determine how popular the post is. A higher
                           ratio
@@ -388,7 +386,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Users.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Subreddit </strong> </h4>
                         <h5>Each subreddit is moderated by a team of volunteer moderators who
                           enforce a set of rules.</h5>
@@ -408,7 +405,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Calendar.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Timestamp </strong> </h4>
                         <h5>Timestamp indicating when the post was created on the platform.</h5>
                       </div>
@@ -422,7 +418,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_feather.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Title </strong> </h4>
                         <h5>Access titles from Reddit posts to search titles across the entire
                           Reddit platform. </h5>
@@ -437,7 +432,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_Document.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Conmment </strong> </h4>
                         <h5>Developers can use the API to retrieve information about posts </h5>
                       </div>
@@ -451,7 +445,6 @@
                       <div class="elementInnerSEER heightS">
                         <img class="iconM" src="icon_User.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h4> <strong> Author </strong> </h4>
                         <h5>Get information about Reddit authors, such as
                           their karma score and post history.</h5>
@@ -563,9 +556,8 @@
               <div class="Grid Grid--gutters Grid--cols-3">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightS">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
-                      <div class="blankHXS"></div>
                       <h4> <strong> Find data</strong> </h4>
 
                       <ul>
@@ -576,10 +568,9 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightS">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
 
-                      <div class="blankHXS"></div>
 
                       <h4> <strong> Filter data</strong> </h4>
 
@@ -591,10 +582,9 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInnerL cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightS">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
 
-                      <div class="blankHXS"></div>
                       <h4> <strong> Structure data</strong> </h4>
                       <ul>
                         <li> It takes time to analyze and compare user data</li>
@@ -794,7 +784,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Document.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h5> <strong> Setup the keywords </strong> </h5>
                         <ul>
                           <li> Monitor the data according to the user's requirements</li>
@@ -812,7 +801,6 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Chart.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h5> <strong> Display data </strong> </h5>
                         <ul>
                           <li>Clear and concise data presentation</li>
@@ -829,7 +817,6 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Data.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h5> <strong> Data Comparison </strong> </h5>
                         <ul>
                           <li> Retrieve data within a specified timeframe</li>
@@ -847,7 +834,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Alert.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h5> <strong> New keyword feed alert </strong> </h5>
                         <ul>
                           <li>Stay informed of all developments regarding [keyword].</li>
@@ -861,7 +847,6 @@
                     <div class="elementSEER">
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Data.svg" alt="icon">
-                        <div class="blankHXS"></div>
                         <h5> <strong>Identify the distinctive data </strong> </h5>
                         <ul>
                           <li> Data drill down</li>
@@ -877,7 +862,6 @@
                       <div class="elementInnerSEER heightM">
                         <img class="iconM" src="icon_Download.svg" alt="icon">
 
-                        <div class="blankHXS"></div>
                         <h5> <strong> Export Data </strong> </h5>
                         <ul>
                           <li>Export data share with team</li>
