--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -61,8 +61,7 @@
 
 
             <h4><strong>University of California, Berkeley </strong></h4>
-            <h6 class="textItalic"> August 2015 - May 2017</h6>
-            <h6 class="textItalic"> August 2018 - May 2019</h6>
+            <h6 class="textItalic"> Aug. 2015 - May 2017 | Aug. 2018 - May 2019</h6>
 
 
             <h6 class="fontWeight400">Master of Architecture</h6>
@@ -103,10 +102,12 @@
             <h5> <strong>Design & Research</strong> </h5>
             <h6>UX Design, Usability Testing, User Research, Wireframing, Prototyping</h6>
             <h6>Design Systems, Responsive Design, Interaction Design, Visual Design</h6>
+            <div class="blankHTiny"></div>
 
 
             <h5> <strong>Software</strong> </h5>
             <h6>Figma, Adobe XD, Sketch, Adobe Creative Suite</h6>
+            <div class="blankHTiny"></div>
 
             <h5> <strong>Technical Skills</strong> </h5>
             <h6>HTML, CSS, JavaScript, JQuery</h6>
@@ -115,18 +116,22 @@
           </div>
 
 
-          <div class="element">
+          <div class="element notDisplayMobile">
 
             <h3> <strong class="colorYellowVW700"> ARCHITECTURAL DESIGN </strong> </h3>
             <h5><strong>Buro OS | Architectural Designer </strong></h5>
             <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
+            <div class="blankHTiny"></div>
 
             <h5><strong>In Design Studio | Summer Intern </strong></h5>
             <h6 class="textItalic">May. 2017 - Aug.2017</h6>
+            <div class="blankHTiny"></div>
 
 
             <h5><strong>PDI Design Group | Architectural Designer </strong></h5>
             <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
+            <div class="blankHTiny"></div>
+
             <h5><strong>Do Union | Designer </strong></h5>
             <h6 class="textItalic">Jul. 2010 - May.2012</h6>
           </div>
@@ -145,12 +150,13 @@
             <h4><strong>BabyQuip | Senior User Experience Designer </strong></h4>
             <h6 class="textItalic">Oct. 2024 - Present, Full-time</h6>
 
-            <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Conducted usability testing across platforms to identify pain points and optimize workflows for the baby gear rental marketplace.</li>
-              <li class="listCircle">Led the redesign of the consumer-facing mobile app, improving booking flow and usability.</li>
-              <li class="listCircle">Updated and refined website filters to enhance search accuracy and user experience.</li>
+              <li class="listCircle">Led the transition from a provider-first to a Gear-First mobile redesign and supported improvements to the responsive web experience, enhancing discoverability, mobile usability, and increasing average order value by 12%.</li>
+              <li class="listCircle">Redesigned the BabyQuip mobile app, streamlining booking, checkout, and navigation to reduce drop-offs and improve retention.</li>
+              <li class="listCircle">Revamped B2B inventory management, enabling scalability for partners and simplifying gear organization.</li>
+              <li class="listCircle">Enhanced website filters, checkout, and gear selection, improving gear discovery and pricing transparency to optimize conversions.</li>
+              <li class="listCircle">Built a scalable design system, ensuring consistency and efficiency across web and mobile.</li>
 
             </ul>
           </div>
@@ -158,15 +164,14 @@
             <h4><strong>BookYourPet | User Experience Designer </strong></h4>
 
             <h6 class="textItalic">Feb. 2024 - Oct. 2024, Full-time</h6>
-            <h6 class="textItalic">Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
+            <h6 class="textItalic">Oct. 2021 - Feb. 2024, Contractor(Full-time)</h6>
 
-            <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Scaled the B2B user base from 0 to 500+ through strategic design and streamlined workflows, reducing booking time to under 1 minute.</li>
-              <li class="listCircle">Transitioned onboarding to a self-service process, increasing adoption and reducing support overhead.</li>
-              <li class="listCircle">Redesigned the B2C mobile booking experience, driving a 169% increase in conversions and cutting booking time by 6 minutes.</li>
-              <li class="listCircle">Established a scalable design system to improve product consistency and developer efficiency.</li>
+              <li class="listCircle">Scaled the B2B user base from 0 to 500+, streamlining booking to under 1 minute.</li>
+              <li class="listCircle">Transitioned onboarding to self-service, reducing support overhead.</li>
+              <li class="listCircle">Redesigned the B2C mobile booking experience, boosting conversions by 169% and cutting booking time by 6 minutes.</li>
+              <li class="listCircle">Established a scalable design system, improving product consistency and developer efficiency.</li>
 
 
 
@@ -177,12 +182,11 @@
 
             <h4><strong>LASO Health | Product Designer </strong></h4>
             <h6 class="textItalic">Aug. 2023 - Jan. 2024, Part-time Contractor</h6>
-            <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Led the 0-1 launch of an Admin Panel for user management and sales teams.</li>
-              <li class="listCircle">Developed a cost-benefit calculator that boosted subscription conversions by simplifying prescription savings for customers.</li>
-              <li class="listCircle">Improved clarity and usability of the design system for mobile and web.</li>
+              <li class="listCircle">Led the 0-1 launch of an Admin Panel for user management.</li>
+              <li class="listCircle">Developed a cost-benefit calculator, improving subscription conversions.</li>
+              <li class="listCircle">Improved clarity and usability of the design system across web and mobile.</li>
 
 
 
@@ -192,10 +196,9 @@
           <div class="element">
             <h4><strong>Modernized Mobile LLC | UX Designer </strong></h4>
             <h6 class="textItalic">June. 2023 - Aug.2023, Part-time Contractor</h6>
-            <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Designed a tablet-based admin panel for the 'Clean Spaces' app, adapting features from the mobile app.</li>
+              <li class="listCircle">Designed a tablet-based admin panel for the "Clean Spaces" app.</li>
 
 
 
@@ -204,12 +207,11 @@
             </ul>
           </div>
           <div class="element">
-            <h4><strong>VW Studio | Freelancer </strong></h4>
+            <h4><strong>vickywang.me | Freelancer </strong></h4>
             <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
-            <div class="blankHTiny"></div>
 
             <ul>
-              <li class="listCircle">Designed and maintained a responsive portfolio website using HTML, CSS, JavaScript, and EJS, deployed on AWS with version control via GitHub.</li>
+              <li class="listCircle">Designed and maintained a responsive portfolio site using HTML, CSS, JavaScript, and EJS, deployed on AWS.</li>
             </ul>
           </div>
         </div>
