--- a/templates/shared/block_nav_footer.ejs
+++ b/templates/shared/block_nav_footer.ejs
@@ -9,7 +9,7 @@
 
   <footer class="borderTop <%= footerBackgroundColor %> ">
 
-    <div class="blankHXS"></div>
+    <div class="blankHXXS"></div>
     <div class="wrapper">
       <div class="element">
 
@@ -18,8 +18,10 @@
             <div class="elementTB">
 
               <div class="element">
+                <div class="blankHTiny"></div>
+
                 <a href="/" class=""><img class="widthXS" src="<%= websitePath %>/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-              </div>
+              </div></div>
               <div class="Grid Grid--gutters">
                 <div class="ClipboardBoxIconOnly">
                   <button class="ClipboardIconOnly">
@@ -38,8 +40,6 @@
                 <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
                   <img class="iconM <%= iconHoverColor %> paddingS fitContent borderRadiusMax" src="<%= websitePath %>/icon/Codepen.svg" alt="CodePen">
                 </a>
-
-              </div>
             </div>
           </div>
           <div class="Grid-cell">
@@ -108,13 +108,13 @@
                   <div class="blankHTiny"></div>
 
                   <a href="/appointa/">
-                    <h6 class="fontWeight400"> APPOINTA</h6>
+                    <h6 class="fontWeight400"> Appointa</h6>
                   </a>
                   <h6>Simplifying Interview Coordination</h6>
 
                   <div class="blankHTiny"></div>
                   <a href="/seer/">
-                    <h6 class="fontWeight400">SEER</h6>
+                    <h6 class="fontWeight400">Seer</h6>
                   </a>
                   <h6>Empowering Brand Managers with Insights</h6>
 
