--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -151,27 +151,26 @@
             <h6 class="textItalic">Oct. 2024 - Present, Full-time</h6>
 
 
-            <ul>
-              <li class="listCircle">Led the transition from a provider-first to a Gear-First mobile redesign and supported improvements to the responsive web experience, enhancing discoverability, mobile usability, and increasing average order value by 12%.</li>
-              <li class="listCircle">Redesigned the BabyQuip mobile app, streamlining booking, checkout, and navigation to reduce drop-offs and improve retention.</li>
-              <li class="listCircle">Revamped B2B inventory management, enabling scalability for partners and simplifying gear organization.</li>
-              <li class="listCircle">Enhanced website filters, checkout, and gear selection, improving gear discovery and pricing transparency to optimize conversions.</li>
-              <li class="listCircle">Built a scalable design system, ensuring consistency and efficiency across web and mobile.</li>
+            <ul class="listCircle">
+              <li class="listLoose">Led the transition from a provider-first to a Gear-First mobile redesign and supported improvements to the responsive web experience, enhancing discoverability, mobile usability, and increasing average order value by 12%.</li>
+              <li class="listLoose">Redesigned the BabyQuip mobile app, streamlining booking, checkout, and navigation to reduce drop-offs and improve retention.</li>
+              <li class="listLoose">Revamped B2B inventory management, enabling scalability for partners and simplifying gear organization.</li>
+              <li class="listLoose">Enhanced website filters, checkout, and gear selection, improving gear discovery and pricing transparency to optimize conversions.</li>
+              <li class="listLoose">Built a scalable design system, ensuring consistency and efficiency across web and mobile.</li>
 
             </ul>
           </div>
           <div class="element">
             <h4><strong>BookYourPet | User Experience Designer </strong></h4>
 
-            <h6 class="textItalic">Feb. 2024 - Oct. 2024, Full-time</h6>
-            <h6 class="textItalic">Oct. 2021 - Feb. 2024, Contractor(Full-time)</h6>
+            <h6 class="textItalic">Feb. 2024 - Oct. 2024, Full-time | Oct. 2021 - Feb. 2024, Full-time Contractor</h6>
 
 
-            <ul>
-              <li class="listCircle">Scaled the B2B user base from 0 to 500+, streamlining booking to under 1 minute.</li>
-              <li class="listCircle">Transitioned onboarding to self-service, reducing support overhead.</li>
-              <li class="listCircle">Redesigned the B2C mobile booking experience, boosting conversions by 169% and cutting booking time by 6 minutes.</li>
-              <li class="listCircle">Established a scalable design system, improving product consistency and developer efficiency.</li>
+            <ul class="listCircle">
+              <li class="listLoose">Scaled the B2B user base from 0 to 500+, streamlining booking to under 1 minute.</li>
+              <li class="listLoose">Transitioned onboarding to self-service, reducing support overhead.</li>
+              <li class="listLoose">Redesigned the B2C mobile booking experience, boosting conversions by 169% and cutting booking time by 6 minutes.</li>
+              <li class="listLoose">Established a scalable design system, improving product consistency and developer efficiency.</li>
 
 
 
@@ -183,10 +182,10 @@
             <h4><strong>LASO Health | Product Designer </strong></h4>
             <h6 class="textItalic">Aug. 2023 - Jan. 2024, Part-time Contractor</h6>
 
-            <ul>
-              <li class="listCircle">Led the 0-1 launch of an Admin Panel for user management.</li>
-              <li class="listCircle">Developed a cost-benefit calculator, improving subscription conversions.</li>
-              <li class="listCircle">Improved clarity and usability of the design system across web and mobile.</li>
+            <ul class="listCircle">
+              <li class="listLoose">Led the 0-1 launch of an Admin Panel for user management.</li>
+              <li class="listLoose">Developed a cost-benefit calculator, improving subscription conversions.</li>
+              <li class="listLoose">Improved clarity and usability of the design system across web and mobile.</li>
 
 
 
@@ -197,8 +196,8 @@
             <h4><strong>Modernized Mobile LLC | UX Designer </strong></h4>
             <h6 class="textItalic">June. 2023 - Aug.2023, Part-time Contractor</h6>
 
-            <ul>
-              <li class="listCircle">Designed a tablet-based admin panel for the "Clean Spaces" app.</li>
+            <ul class="listCircle">
+              <li class="listLoose">Designed a tablet-based admin panel for the "Clean Spaces" app.</li>
 
 
 
@@ -210,8 +209,8 @@
             <h4><strong>vickywang.me | Freelancer </strong></h4>
             <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
 
-            <ul>
-              <li class="listCircle">Designed and maintained a responsive portfolio site using HTML, CSS, JavaScript, and EJS, deployed on AWS.</li>
+            <ul class="listCircle">
+              <li class="listLoose">Designed and maintained a responsive portfolio site using HTML, CSS, JavaScript, and EJS, deployed on AWS.</li>
             </ul>
           </div>
         </div>
