--- a/templates/main.css
+++ b/templates/main.css
@@ -6097,12 +6097,7 @@ pre code {
 .backText {
   font-size: 16px;
   font-weight: 400;
-
-  /* ===================     text-shadow:
-    -1px -1px 0 var(--VW--Grey2024),
-     1px -1px 0 var(--VW--Grey2024),
-    -1px  1px 0 var(--VW--Grey2024),
-     1px  1px 0 var(--VW--Grey2024); ===================*/
+  margin: 0;
 }
 
 /* =================== left arrow  ===================*/
