spacing, font, content

--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="colorBgVW pattern1">
+<html lang="en" class="colorBgVW pattern1 colorBlack">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:`Vicky's Resume`, description:`I'm a UX Designer focused on
   bridging efficiency and engagement in SaaS, administrative Interfaces, and user-Driven applications`, pageURL:'',
@@ -47,6 +47,7 @@
         <div class="Grid-cell">
           <h6>&#160; &#160; UX Design | Product Design </h6>
         </div>
+        <h5><strong>Passionate about crafting intuitive, impactful UX for users & businesses </strong></h5>
 
       </div>
 
@@ -60,25 +61,25 @@
 
 
 
-            <h4><strong>University of California, Berkeley </strong></h4>
+            <h5><strong>University of California, Berkeley </strong></h5>
             <h6 class="textItalic"> Aug. 2015 - May 2017 | Aug. 2018 - May 2019</h6>
 
 
             <h6 class="fontWeight400">Master of Architecture</h6>
 
-            <h6>College of Environmental Design, 3-year Program</h6>
+            <h6>College of Environmental Design, 3-Year Program</h6>
 
             <h6>Architecture & Building Science/Technology </h6>
             <div class="blankHTiny"></div>
 
-            <h4> <strong>Beijing University of Technology </strong> </h4>
+            <h5> <strong>Beijing University of Technology </strong> </h5>
             <h6 class="textItalic"> September 2009 - July 2013</h6>
 
             <h6 class="fontWeight400">Bachelor of Art</h6>
             <h6> Art &amp; Design &amp; Landscape Design </h6>
             <div class="blankHTiny"></div>
 
-            <h4> <strong>Certifications </strong> </h4>
+            <h5> <strong>Certifications </strong> </h5>
             <h6 class="fontWeight400">Google UX Design Professional Certificate (2021)</h6>
             <h6 class="fontWeight400">Codecademy:</h6>
             <h6>User Research (Apr 2023)</h6>
@@ -90,10 +91,7 @@
 
             <h6 class="fontWeight400">Udemy:</h6>
             <h6>Become a Product Manager: Learn the Skills & Get the Job (Dec 2024)</h6>
-            <h6>The Complete JavaScript Course: From Zero to Expert! (In Progress, Jun 2024)</h6>
-
-
-
+            <h6>The Complete JavaScript Course: From Zero to Expert! (Jan. 2025)</h6>
           </div>
 
           <div class="element">
@@ -119,20 +117,20 @@
           <div class="element notDisplayMobile">
 
             <h3> <strong class="colorYellowVW700"> ARCHITECTURAL DESIGN </strong> </h3>
-            <h5><strong>Buro OS | Architectural Designer </strong></h5>
+            <h6><strong>Buro OS | Architectural Designer </strong></h6>
             <h6 class="textItalic">Aug. 2017 - Jul.2018</h6>
             <div class="blankHTiny"></div>
 
-            <h5><strong>In Design Studio | Summer Intern </strong></h5>
+            <h6><strong>In Design Studio | Summer Intern </strong></h6>
             <h6 class="textItalic">May. 2017 - Aug.2017</h6>
             <div class="blankHTiny"></div>
 
 
-            <h5><strong>PDI Design Group | Architectural Designer </strong></h5>
+            <h6><strong>PDI Design Group | Architectural Designer </strong></h6>
             <h6 class="textItalic">Dec. 2013 - Jul.2015</h6>
             <div class="blankHTiny"></div>
 
-            <h5><strong>Do Union | Designer </strong></h5>
+            <h6><strong>Do Union | Designer </strong></h6>
             <h6 class="textItalic">Jul. 2010 - May.2012</h6>
           </div>
 
@@ -152,11 +150,19 @@
 
 
             <ul class="listCircle">
-              <li class="listLoose">Led the transition from a provider-first to a Gear-First mobile redesign and supported improvements to the responsive web experience, enhancing discoverability, mobile usability, and increasing average order value by 12%.</li>
-              <li class="listLoose">Redesigned the BabyQuip mobile app, streamlining booking, checkout, and navigation to reduce drop-offs and improve retention.</li>
-              <li class="listLoose">Revamped B2B inventory management, enabling scalability for partners and simplifying gear organization.</li>
-              <li class="listLoose">Enhanced website filters, checkout, and gear selection, improving gear discovery and pricing transparency to optimize conversions.</li>
-              <li class="listLoose">Built a scalable design system, ensuring consistency and efficiency across web and mobile.</li>
+              <li class="listLoose">Led the transition from a provider-first to a gear-first mobile experience, enhancing discoverability, mobile usability, and increasing average order value by 12%.              </li>
+              <li class="listLoose">Redesigned the BabyQuip mobile app to streamline booking, checkout, and navigation—reducing drop-offs and improving retention.
+
+              </li>
+              <li class="listLoose">Overhauled B2B inventory management to support partner scalability and simplify gear organization.
+
+              </li>
+              <li class="listLoose">Improved filters, checkout, and gear selection on the website to enhance discovery and pricing transparency, optimizing conversions.
+
+              </li>
+              <li class="listLoose">Built a scalable design system to ensure consistency and efficiency across web and mobile platforms.
+
+              </li>
 
             </ul>
           </div>
@@ -167,10 +173,18 @@
 
 
             <ul class="listCircle">
-              <li class="listLoose">Scaled the B2B user base from 0 to 500+, streamlining booking to under 1 minute.</li>
-              <li class="listLoose">Transitioned onboarding to self-service, reducing support overhead.</li>
-              <li class="listLoose">Redesigned the B2C mobile booking experience, boosting conversions by 169% and cutting booking time by 6 minutes.</li>
-              <li class="listLoose">Established a scalable design system, improving product consistency and developer efficiency.</li>
+              <li class="listLoose">Scaled the B2B user base from 0 to 500+, reducing booking time to under 1 minute.
+
+              </li>
+              <li class="listLoose">Shifted onboarding to a self-service model, reducing support overhead.
+
+              </li>
+              <li class="listLoose">Redesigned the B2C mobile experience, boosting conversions by 169% and shortening booking time by 6 minutes.
+
+              </li>
+              <li class="listLoose">Built a scalable design system to improve product consistency and streamline developer workflows.
+
+              </li>
 
 
 
@@ -183,9 +197,11 @@
             <h6 class="textItalic">Aug. 2023 - Jan. 2024, Part-time Contractor</h6>
 
             <ul class="listCircle">
-              <li class="listLoose">Led the 0-1 launch of an Admin Panel for user management.</li>
+              <li class="listLoose">Designed and launched the first version of an admin panel for user management.</li>
               <li class="listLoose">Developed a cost-benefit calculator, improving subscription conversions.</li>
-              <li class="listLoose">Improved clarity and usability of the design system across web and mobile.</li>
+              <li class="listLoose">Improved design system clarity and usability across web and mobile.
+
+              </li>
 
 
 
@@ -197,7 +213,9 @@
             <h6 class="textItalic">June. 2023 - Aug.2023, Part-time Contractor</h6>
 
             <ul class="listCircle">
-              <li class="listLoose">Designed a tablet-based admin panel for the "Clean Spaces" app.</li>
+              <li class="listLoose">Designed a tablet-based admin panel for the “Clean Spaces” app.
+
+              </li>
 
 
 
@@ -210,7 +228,9 @@
             <h6 class="textItalic">Aug. 2020 - Present, Owner</h6>
 
             <ul class="listCircle">
-              <li class="listLoose">Designed and maintained a responsive portfolio site using HTML, CSS, JavaScript, and EJS, deployed on AWS.</li>
+              <li class="listLoose">Designed and maintained a responsive portfolio site using HTML, CSS, JavaScript, and EJS, deployed on AWS.
+
+              </li>
             </ul>
           </div>
         </div>
